# bangumi-api

./: Cargo.toml  README.md  tmp.json
src/: lib.rs
src/common/: error.rs  mod.rs  model.rs
src/module/: mod.rs  model.rs
src/module/character/: mod.rs  model.rs  service.rs  test.rs
src/module/collection/: model.rs  service.rs  test.rs
src/module/episode/: mod.rs  model.rs  service.rs  test.rs
src/module/indice/: model.rs  service.rs  test.rs
src/module/person/: model.rs  service.rs  test.rs
src/module/revision/: model.rs  service.rs  test.rs
src/module/subject/: model.rs  service.rs  test.rs
src/module/user/: model.rs  service.rs  test.rs
