[package]
name = "bangumi-api"
version = "0.1.2"
edition = "2024"
authors = ["waitsalt <waitsalt@outlook.com>"]
description = "An api implementation for Bangumi website."
readme = "README.md"
repository = "https://github.com/waitsalt/bangumi-api"
homepage = "https://github.com/waitsalt/bangumi-api"
keywords = ["bangumi"]
license = "MIT"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_repr = "0.1.20"
